[metadata]
name = montag-cleaner
version = 1.0.0
author = Seth Grover
author_email = mero.mero.guero@gmail.com
description = Montag is a utility which reads e-book files and scrubs them of profanity.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmguero/montag
project_urls =
    Bug Tracker = https://github.com/mmguero/montag/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License

[options]
package_dir =
    = src
packages = find:
zip_safe = False
python_requires = >=3.6
install_requires =
    python-magic
    ebooklib

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts =
    montag = montag_cleaner:RunMontag

[options.packages.find]
where = src